# dt-dataflow-plugin-template

./: CMakeLists.txt  vcpkg.json
src/: plugin.cpp
